--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,41 @@
 body {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #f8f8f8;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    flex-direction: column;
 }
 
 header {
-    background-color: #ff7070;
-    color: #fff;
-    text-align: center;
+    background-color: #f8f8f8;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
-}
-
-.container {
     text-align: center;
-    margin-top: 20px;
 }
 
-button {
-    background-color: #ff7070;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-button:hover {
-    background-color: #e5673b;
-}
-
-.compliment-text {
-    font-size: 24px;
+h1 {
     color: #333;
-    margin-top: 10px;
+}
+
+#automatic-compliment {
+    background-color: #eaeaea;
+    padding: 20px;
+    text-align: center;
+}
+
+#compliment-text {
+    font-size: 1.5em;
+    color: #ff3366;
+}
+
+#photo-gallery {
+    /* Adicione estilos para a galeria de fotos conforme necessário */
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
